packages/next-swc/crates/core/tests/errors/next-font-downloaders/no-args/input.js
import { Inter } from '@next/google-fonts'
fn()
Inter()
